# platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.sqlx/: query-164986c4eed4df647c9ee78544db2b3a509f6dd2b2412e504505d04715f2762e.json  query-1cda232c7f962546cbfe7df07f2188691289ec3f0465e4d1a172c93cef44e6f8.json  query-227605b32ed8dd498569fba3dc6fe8c184397f1e38755c1fc04ade585a99c704.json  query-363855749ea9ca8b198dded9c9fe68c5e0c2933a1dd4690fadbca4bf6e08ab39.json  query-4e357919d9d0e3781cd391498759c828afc9afd1e4e8a92a7759867684154a3a.json  query-556568c47b50afdd415b02213a83e2772186a9b2c040f52f9620073175ed9a47.json  query-61453abce362383e9960335732990d951bb357fc1a4ef2f27bb77042d875de13.json  query-69b62705bdc38329aaa7df782baf6553b04ff91ee11c16dd2679a5d883f1921c.json  query-89c7af9f5835de25005eecbf529e43800bc6a2033c26b8f6ad84a00ab62cdfe7.json  query-b637dfd9627e0861c59bf9f69675b51dd65b8c932fa9c457ee80c01fe763927d.json
api/: Cargo.toml
api-docs/: AccountAvatarUpload.yml  Me.yml  MediaAvatarServe.yml  PresentationComplete.yml  Register.yml  WalletPresentationResponse.yml  WalletPresentationStart.yml  opencollection.yml
api/src/: api.rs  eudi_presentation.rs  main.rs  validation.rs
api/src/api/: api.rs  common.rs  eudi_presentation.rs  mod.rs  wallet.rs
api/src/db/: database.rs  mod.rs  supported_countries.rs  user.rs
api/src/random/: handle.rs
api/src/storage/: avatar_store.rs  mod.rs
migrations/: 20260603220535_init.down.sql  migrate.sh  (+4 more)
(+431 files in other folders)
